k8s/more-service.yml
apiVersion: v1
kind: Service
metadata:
  name: more-service
spec:
  selector:
    app: more
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
