k8s/more-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: more-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - more.iter.tw
    secretName: wildcard-iter-tw
  rules:
  - host: more.iter.tw
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: more-service
            port:
              number: 80
